--- a/collaborative/package.json
+++ b/collaborative/package.json
@@ -12,10 +12,13 @@
     "compoventuals-container-testing-server": "file:../../compoventuals/container-testing-server",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
+    "css-loader": "^6.3.0",
     "html-webpack-plugin": "^5.3.2",
+    "prettier": "^2.2.1",
     "react-dev-utils": "^11.0.4",
     "rimraf": "^2.7.1",
     "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.0",
     "ts-loader": "^9.2.5",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
@@ -26,6 +29,8 @@
     "start": "container-testing-server dist/index.html",
     "dev": "cross-env TS_NODE_PROJECT='tsconfig-for-webpack-config.json' webpack",
     "build": "cross-env TS_NODE_PROJECT='tsconfig-for-webpack-config.json' webpack --mode production --no-devtool",
+    "test": "prettier --check .",
+    "fix": "prettier --write .",
     "clean": "rimraf dist"
   }
 }
