use published collabs

--- a/collaborative/package.json
+++ b/collaborative/package.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-    "bootstrap": "^5.1.1",
-    "compoventuals": "file:../../compoventuals/main",
-    "compoventuals-container": "file:../../compoventuals/container"
+    "@collabs/collabs": "^0.1.1",
+    "@collabs/container": "^0.1.1",
+    "bootstrap": "^5.1.1"
   },
   "devDependencies": {
+    "@collabs/container-testing-server": "^0.1.0",
     "@types/node": "^15.6.1",
     "@types/react-dev-utils": "^9.0.8",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.2",
     "clean-webpack-plugin": "^3.0.0",
-    "compoventuals-container-testing-server": "file:../../compoventuals/container-testing-server",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.3.0",
